--- a/src/css/themes/light.scss
+++ b/src/css/themes/light.scss
@@ -8,7 +8,7 @@ body {
   background: $color2;
 }
 
-.panel-right {
+.menu {
   background-color: $color2;
 }
 
@@ -60,7 +60,7 @@ text.chart-legend {
 }
 
 .breakdown {
-  background: $color2;
+  background: rgba(255, 255, 266, 0.8);
   border-color: $color5;
 }
 
