--- a/docs/css/themes/dark.css
+++ b/docs/css/themes/dark.css
@@ -4,7 +4,7 @@ body {
   fill: #aa8;
 }
 
-.panel-right {
+.menu {
   background-color: #111;
 }
 
@@ -61,7 +61,7 @@ text.chart-legend {
 }
 
 .breakdown-close {
-  background-color: #111;
+  background-color: rgba(22, 22, 22, 0.8);
   border: 1px solid #444;
   color: #aa8;
 }
