--- a/docs/css/themes/light.css
+++ b/docs/css/themes/light.css
@@ -2,7 +2,7 @@ body {
   background: #fff;
 }
 
-.panel-right {
+.menu {
   background-color: #fff;
 }
 
@@ -54,7 +54,7 @@ text.chart-legend {
 }
 
 .breakdown {
-  background: #fff;
+  background: rgba(255, 255, 255, 0.8);
   border-color: #222;
 }
 
