--- a/src/css/_page-structure.scss
+++ b/src/css/_page-structure.scss
@@ -14,10 +14,13 @@ svg {
 }
 
 h1 {
-  display: inline-block;
   font-size: 1.5em;
   font-weight: bold;
-  line-height: 30em;
+}
+
+h2 {
+  font-size: 1.3em;
+  font-weight: bold;
 }
 
 a,
