--- a/docs/css/themes/light.css
+++ b/docs/css/themes/light.css
@@ -7,64 +7,52 @@ body {
 }
 
 .menu-button {
-  background-color: #f60;
+  background-color: #1f4a80;
   color: #fff;
 }
 
 .border {
-  border: 1px solid #ccc;
+  border: 1px solid #b6d4f8;
 }
 
 .border-left {
-  border-left: 1px solid #ccc;
+  border-left: 1px solid #b6d4f8;
 }
 
 rect.chart-legend {
   fill: #fff;
-  stroke: #ccc;
+  stroke: #1f4a80;
 }
 
 text.chart-legend {
-  fill: #f60;
+  fill: #1f4a80;
 }
 
 .handle {
-  background: #f60;
-  color: #222;
+  background: #1f4a80;
+  color: #3c94ff;
 }
 
 .node-label {
-  fill: #222;
-}
-
-.nv-label text {
-  fill: #f60;
-}
-
-.nv-legend-text {
   fill: #000;
 }
 
-.nv-pie path {
-  stroke: #222;
-}
-
 .th-fg-color {
-  color: #f60;
+  color: #1f4a80;
 }
 
 .breakdown {
   background: rgba(255, 255, 255, 0.8);
-  border-color: #222;
+  border-color: #3c94ff;
 }
 
 .breakdown-close {
-  background-color: #f60;
+  background-color: #1f4a80;
   color: #fff;
 }
 
 select {
-  background: #ccc;
-  border-color: #222;
-  color: #000;
+  background: #b6d4f8;
+  border-color: #3c94ff;
+  color: #1f4a80;
 }
