--- a/src/css/_breakdown.scss
+++ b/src/css/_breakdown.scss
@@ -10,7 +10,7 @@ img.ready:hover {
 }
 
 .breakdown {
-  @include globals.fx;
+  @include globals.fx($dir: row);
   @include globals.transition;
 
   bottom: 0;
@@ -33,12 +33,16 @@ img.ready:hover {
   @include globals.fx;
 
   align-items: center;
-  height: 32px;
   justify-content: space-between;
   left: 0;
   position: absolute;
   top: 0;
   width: 100%;
+}
+
+.breakdown-img {
+  height: 32px;
+  width: 32px;
 }
 
 .breakdown-close {
