--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -249,6 +249,15 @@ text.chart-legend {
   fill: #000;
   font-weight: bold;
   text-anchor: middle;
+  transform: rotate(270deg);
+}
+
+.node-label-outer-right {
+  text-anchor: end;
+}
+
+.node-label-outer-left {
+  text-anchor: start;
 }
 
 .node rect {
