--- a/src/css/_sankey.scss
+++ b/src/css/_sankey.scss
@@ -1,4 +1,4 @@
-@use 'globals';
+@use "globals";
 
 .link {
   stroke: #000;
@@ -18,6 +18,15 @@
   fill: #000;
   font-weight: bold;
   text-anchor: middle;
+  transform: rotate(270deg);
+}
+
+.node-label-outer-right {
+  text-anchor: end;
+}
+
+.node-label-outer-left {
+  text-anchor: start;
 }
 
 .node rect {
