--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -1,8 +1,8 @@
-@use 'page-structure';
-@use 'titlebar';
-@use 'menu';
-@use 'legend';
-@use 'sankey';
-@use 'dataquality';
-@use 'column';
-@use 'breakdown';
+@use "page-structure";
+@use "titlebar";
+@use "menu";
+@use "legend";
+@use "sankey";
+@use "dataquality";
+@use "column";
+@use "breakdown";
