--- a/src/css/_sankey.scss
+++ b/src/css/_sankey.scss
@@ -1,16 +1,14 @@
 @use "globals";
 
 .link {
-  stroke: #000;
-  stroke-opacity: 0.3;
+  transition: stroke-opacity 500ms;
+}
+
+.link.selected {
+  stroke-opacity: 1 !important;
 }
 
 .link:hover {
-  stroke-opacity: 0.7;
-}
-
-.link:hover,
-.nv-slice:hover {
   cursor: pointer;
 }
 
@@ -31,7 +29,6 @@
 
 .node rect {
   cursor: move;
-  fill-opacity: 0.9;
   shape-rendering: crispEdges;
 }
 
