--- a/src/css/themes/light.scss
+++ b/src/css/themes/light.scss
@@ -57,6 +57,10 @@ text.chart-legend {
   color: $color2;
 }
 
+.switch-chart {
+  color: $color1;
+}
+
 select {
   background: $color4;
   border-color: $color5;
