--- a/src/css/themes/dark.scss
+++ b/src/css/themes/dark.scss
@@ -60,6 +60,10 @@ text.chart-legend {
   color: $color1;
 }
 
+.switch-chart {
+  color: $color1;
+}
+
 select {
   background: $color3;
   border-color: $color5;
