Fix chart scrolling

--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -378,7 +378,7 @@ img.ready:hover {
   text-align: center;
   height: 100%;
   margin-left: 10px;
-  max-width: 40%;
+  max-width: 30%;
 }
 
 .breakdown-chart {
@@ -388,4 +388,5 @@ img.ready:hover {
 
 .switch-chart {
   cursor: pointer;
+  user-select: none;
 }
