--- a/src/css/themes/light.scss
+++ b/src/css/themes/light.scss
@@ -61,6 +61,10 @@ text.chart-legend {
   color: $color1;
 }
 
+.legend-resize {
+  color: $color1;
+}
+
 select {
   background: $color4;
   border-color: $color5;
