--- a/src/css/themes/dark.scss
+++ b/src/css/themes/dark.scss
@@ -64,6 +64,10 @@ text.chart-legend {
   color: $color1;
 }
 
+.legend-resize {
+  color: $color1;
+}
+
 select {
   background: $color3;
   border-color: $color5;
