--- a/src/css/themes/dark.scss
+++ b/src/css/themes/dark.scss
@@ -50,8 +50,8 @@ text.chart-legend {
 }
 
 .breakdown {
-  background: $color5;
-  border-color: $color3;
+  background: $color2;
+  border-top: 1px solid $color1;
 }
 
 .breakdown-close {
