--- a/src/css/themes/light.scss
+++ b/src/css/themes/light.scss
@@ -48,8 +48,8 @@ text.chart-legend {
 }
 
 .breakdown {
-  background: rgba(255, 255, 266, 0.9);
-  border-color: $color5;
+  background: $color2;
+  border-top: 1px solid $color1;
 }
 
 .breakdown-close {
