WIP - opacity outstanding

--- a/src/css/_page-structure.scss
+++ b/src/css/_page-structure.scss
@@ -79,7 +79,9 @@ a:focus {
 #chart {
   @include globals.fx;
   @include globals.fx-center;
-  @include globals.maxsize;
+
+  height: 90%;
+  width: 100%;
 }
 
 #content {
