--- a/src/css/_sankey.scss
+++ b/src/css/_sankey.scss
@@ -1,28 +1,33 @@
 @use "globals";
 
 .link {
+  stroke-opacity: 0.3;
   transition: stroke-opacity 500ms;
+}
+
+.link:hover {
+  cursor: pointer;
+  stroke-opacity: 0.7 !important;
 }
 
 .link.selected {
   stroke-opacity: 1 !important;
 }
 
-.link:hover {
+.node {
+  transition: opacity 500ms;
+}
+
+.node:hover {
   cursor: pointer;
 }
 
-.node-label {
-  fill: #000;
-  font-weight: bold;
-  text-anchor: middle;
-}
-
-.node rect {
-  cursor: move;
+rect {
   shape-rendering: crispEdges;
+  stroke: #000;
+  stroke-width: 1px;
 }
 
-.node text {
-  pointer-events: none;
+text {
+  user-select: none;
 }
