--- a/src/css/themes/dark.scss
+++ b/src/css/themes/dark.scss
@@ -73,3 +73,11 @@ select {
   border-color: $color5;
   color: $color1;
 }
+
+.playback-prompt {
+  fill: $color1;
+}
+
+.tip {
+  background-color: $color2;
+}
