--- a/src/css/themes/light.scss
+++ b/src/css/themes/light.scss
@@ -70,3 +70,11 @@ select {
   border-color: $color5;
   color: $color1;
 }
+
+.playback-prompt {
+  fill: $color2;
+}
+
+.tip {
+  background-color: $color2;
+}
